--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -41,11 +41,36 @@
   "de": "Deutsch",
   "zh": "简体中文",
   "pt": "󠁥󠁮󠁧󠁿Português",
+  "ru": "󠁥󠁮󠁧󠁿Русский",
   "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
   "notif_msg": "هذا مثال لرسالة شائعة الاستخدام للحصول على معلومات مهمة للزوار أو المستخدمين. الرجاء النقر فوق الزر بجانب إغلاق هذه الرسالة.",
   "starter-landing": {
     "title": "مثال بسيط",
     "description_text": "إنها صفحة فارغة. ابدأ في إنشاء صفحتك من هنا."
-  }
+  },
+  "color_theme": "وضع الآلوان",
+  "select_language": "اختار اللغة",
+  "light_coloured": "فاتح",
+  "dark_coloured": "غامق",
+  "main": "الأساسية",
+  "about_us": "معلومات عنا",
+  "pricing": "التسعير",
+  "contacts": "جهات الاتصال",
+  "halal": "حلال",
+  "staff": "ستاف",
+  "halal_staff": "حلال ستاف",
+  "first_page_long_text": "الشركة لتعيين العمالة الخارجية الوحيدة  على مستوى روسيا التي يعمل بها جزارون محترفون في ذبح على طريقة شرعية \"حلال\" يدويًا على نطاق شركات كبيرة الإنتاج",
+  "profitable": "مربح",
+  "conveniently": "ملائم",
+  "exclusive": "حصري",
+  "profit_short_text": "زيادة في الأرباح نتيجة إنتاج المزيد من المنتجات الهامشية ، بما في ذلك إمكانية إنتاج منتجات نصف مصنعة",
+  "conveniently_short_text": "عملية ذبح يدوية مبسطة دون توقف. تخفيف العبء على قسم المحاسبة والموارد البشرية.",
+  "exclusive_short_text": "دخول سريع إلى سوق صناعة الحلال وتغطية عملاء جدد. المكانة الواثقة وحماية السمعة وتحسين صورة الشركة والامتثال لجميع معايير الحلال",
+  "high_professionalism": "احترافية عالية",
+  "high_professionalism_text": "نحن نقدم خدمة ذبح احترافية وفقًا لجميع المتطلبات الصارمة ومعايير الحلال.",
+  "opportunities_and_prospects": "الفرص والآفاق",
+  "opportunities_and_prospects_text": "العمل الجماعي مع هيئات منح شهادات الحلال الرئيسية والمساعدة في ترويج منتجات الشركات المصنعة في الأسواق الخارجية.",
+  "streamlined_workflow": "سير عمل انسيابي",
+  "streamlined_workflow_text": "تطبق شركتنا نظام إدارة الحلال. نحن نراقب بدقة جودة انضباط العمل. إذا لزم الأمر ، يمكننا استبدال الموظف ، ونهتم بجميع المواقف غير المتوقعة."
 }
