--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -42,10 +42,35 @@
   "zh": "简体中文",
   "pt": "󠁥󠁮󠁧󠁿Português",
   "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
+  "ru": "󠁥󠁮󠁧󠁿Русский",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
   "notif_msg": "This is an example of a message that is commonly used for important information to visitors or users. Please click the button beside to close this message.",
   "starter-landing": {
     "title": "A simple example",
     "description_text": "Start to build your'e page from here."
-  }
+  },
+  "color_theme": "Color theme",
+  "select_language": "Select language",
+  "light_coloured": "Light",
+  "dark_coloured": "Dark",
+  "main": "Main",
+  "about_us": "About Us",
+  "pricing": "Pricing",
+  "contacts": "Contacts",
+  "halal": "Halal",
+  "staff": "Staff",
+  "halal_staff": "Halal Staff",
+  "first_page_long_text": "The only one in Russia outstaffing company with professional halal slaughterers surrounds the slaughter by hand on an industrial scale.",
+  "profitable": "Profitable",
+  "conveniently": "Conveniently",
+  "exclusive": "Exclusive",
+  "profit_short_text": "Increase in profits due to the production of more marginal products, including the possibility of producing semi-finished products",
+  "conveniently_short_text": "A streamlined manual slaughter process with no downtime. Reducing the burden on the accounting department and the HR department.",
+  "exclusive_short_text": "Rapid entry into the market of the Halal industry and coverage of new customers. Confident positioning, protection of reputation, improvement of the company's image, compliance with all Halal standards",
+  "high_professionalism": "High professionalism",
+  "high_professionalism_text": "We provide a professional slaughter service according to all strict requirements and halal standards.",
+  "opportunities_and_prospects": "Opportunities and Prospects",
+  "opportunities_and_prospects_text": "Teamwork with key Halal certification bodies and assistance in promoting manufacturers' products to foreign markets.",
+  "streamlined_workflow": "Streamlined workflow",
+  "streamlined_workflow_text": "Our company implements a halal management system. We strictly monitor the quality of labor discipline. If necessary, we can replace the employee, and we take care of all unforeseen situations."
 }
