--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -72,5 +72,6 @@
   "opportunities_and_prospects": "الفرص والآفاق",
   "opportunities_and_prospects_text": "العمل الجماعي مع هيئات منح شهادات الحلال الرئيسية والمساعدة في ترويج منتجات الشركات المصنعة في الأسواق الخارجية.",
   "streamlined_workflow": "سير عمل انسيابي",
-  "streamlined_workflow_text": "تطبق شركتنا نظام إدارة الحلال. نحن نراقب بدقة جودة انضباط العمل. إذا لزم الأمر ، يمكننا استبدال الموظف ، ونهتم بجميع المواقف غير المتوقعة."
+  "streamlined_workflow_text": "تطبق شركتنا نظام إدارة الحلال. نحن نراقب بدقة جودة انضباط العمل. إذا لزم الأمر ، يمكننا استبدال الموظف ، ونهتم بجميع المواقف غير المتوقعة.",
+  "complex_services_agroholdings": "مجمع خدمات الحلال للحيازات الزراعية"
 }
