--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -72,5 +72,6 @@
   "opportunities_and_prospects": "Opportunities and Prospects",
   "opportunities_and_prospects_text": "Teamwork with key Halal certification bodies and assistance in promoting manufacturers' products to foreign markets.",
   "streamlined_workflow": "Streamlined workflow",
-  "streamlined_workflow_text": "Our company implements a halal management system. We strictly monitor the quality of labor discipline. If necessary, we can replace the employee, and we take care of all unforeseen situations."
+  "streamlined_workflow_text": "Our company implements a halal management system. We strictly monitor the quality of labor discipline. If necessary, we can replace the employee, and we take care of all unforeseen situations.",
+  "complex_services_agroholdings": "Complex of Halal Services for Agroholdings"
 }
