--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -68,5 +68,6 @@
     "opportunities_and_prospects": "Возможности и Перспективы",
     "opportunities_and_prospects_text": "Командная работа с ключевыми органами по сертификации Халяль и помощь в продвижении продукции производителей на зарубежные рынки сбыта.",
     "streamlined_workflow": "Отлаженный рабочий процесс",
-    "streamlined_workflow_text": "Наша компания внедряет систему менеджмента халяль. Мы строго следим за качеством трудовой дисциплины. При необходимости мы можем заменить работника, и все непредвиденные ситуации берем на себя."
+    "streamlined_workflow_text": "Наша компания внедряет систему менеджмента халяль. Мы строго следим за качеством трудовой дисциплины. При необходимости мы можем заменить работника, и все непредвиденные ситуации берем на себя.",
+    "complex_services_agroholdings": "Комплекса Халяль Услуг для Агрохолдингов"
 }
