add certif dialogs footer styles

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -73,5 +73,12 @@
   "opportunities_and_prospects_text": "العمل الجماعي مع هيئات منح شهادات الحلال الرئيسية والمساعدة في ترويج منتجات الشركات المصنعة في الأسواق الخارجية.",
   "streamlined_workflow": "سير عمل انسيابي",
   "streamlined_workflow_text": "تطبق شركتنا نظام إدارة الحلال. نحن نراقب بدقة جودة انضباط العمل. إذا لزم الأمر ، يمكننا استبدال الموظف ، ونهتم بجميع المواقف غير المتوقعة.",
-  "complex_services_agroholdings": "مجمع خدمات الحلال للحيازات الزراعية"
+  "complex_services_agroholdings": "مجمع خدمات الحلال للحيازات الزراعية",
+  "read_more": "تفاصيل أكثر",
+  "more_years_experience_range_services": "أكثر من 11 عامًا من الخبرة في خدمات الذبح اليدوي",
+  "investments_halal_slaughter": "35 مليون روبل استثمارات لتنظيم الذبح الحلال",
+  "speed_slaughter_per_hour": "تصل سرعة الذبح إلى 12000 رأس في الساعة.",
+  "certificates": "الشهادات",
+  "certificates_documentation": "الشهادات والوثائق",
+  "company_necessary_documents_certificates": "شركتنا لديها قائمة الوثائق والشهادات اللازمة"
 }
