--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -73,5 +73,12 @@
   "opportunities_and_prospects_text": "Teamwork with key Halal certification bodies and assistance in promoting manufacturers' products to foreign markets.",
   "streamlined_workflow": "Streamlined workflow",
   "streamlined_workflow_text": "Our company implements a halal management system. We strictly monitor the quality of labor discipline. If necessary, we can replace the employee, and we take care of all unforeseen situations.",
-  "complex_services_agroholdings": "Complex of Halal Services for Agroholdings"
+  "complex_services_agroholdings": "Complex of Halal Services for Agroholdings",
+  "read_more": "Read more",
+  "more_years_experience_range_services": "More than 11 years of experience in slaughter services",
+  "investments_halal_slaughter": "35 million rubles of investments for the organization of Halal slaughter",
+  "speed_slaughter_per_hour.": "The speed of slaughter up to 12,000 heads per hour.",
+  "certificates": "Certificates",
+  "certificates_documentation": "Certificates and Documentation",
+  "company_necessary_documents_certificates": "Our company has the necessary list of documents and certificates"
 }
