--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -69,5 +69,12 @@
     "opportunities_and_prospects_text": "Командная работа с ключевыми органами по сертификации Халяль и помощь в продвижении продукции производителей на зарубежные рынки сбыта.",
     "streamlined_workflow": "Отлаженный рабочий процесс",
     "streamlined_workflow_text": "Наша компания внедряет систему менеджмента халяль. Мы строго следим за качеством трудовой дисциплины. При необходимости мы можем заменить работника, и все непредвиденные ситуации берем на себя.",
-    "complex_services_agroholdings": "Комплекса Халяль Услуг для Агрохолдингов"
+    "complex_services_agroholdings": "Комплекса Халяль Услуг для Агрохолдингов",
+    "read_more": "Подробнее",
+    "more_years_experience_range_services": "Более 11 лет опыта услуг ручного забоя",
+    "investments_halal_slaughter": "35 млн рублей инвестиций на организацию убоя Халяль",
+    "speed_slaughter_per_hour": "Скорость убоя до 12000 голов в час.",
+    "certificates": "Сертификаты",
+    "certificates_documentation": "Сертификаты и Документация",
+    "company_necessary_documents_certificates": "Наша компания имеет необходимый перечень документов и сертификатов"
 }
