start on agro holdings page

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -77,8 +77,25 @@
   "read_more": "تفاصيل أكثر",
   "more_years_experience_range_services": "أكثر من 11 عامًا من الخبرة في خدمات الذبح اليدوي",
   "investments_halal_slaughter": "35 مليون روبل استثمارات لتنظيم الذبح الحلال",
-  "speed_slaughter_per_hour": "تصل سرعة الذبح إلى 12000 رأس في الساعة.",
+  "speed_slaughter_per_hour": "تصل سرعة الذبح إلى 12 000 رأس في الساعة.",
   "certificates": "الشهادات",
   "certificates_documentation": "الشهادات والوثائق",
-  "company_necessary_documents_certificates": "شركتنا لديها قائمة الوثائق والشهادات اللازمة"
+  "company_necessary_documents_certificates": "شركتنا لديها قائمة الوثائق والشهادات اللازمة",
+  "service_packages": "حزم الخدمات",
+  "individual_client_price_plan": "نهج فردي لكل عميل في خطة الأسعار",
+  "mobile_brigade": "فريق متنقل",
+  "departure_factory": "حضور الفريق إلى المصنع",
+  "short_term_audits_seasonal": "المدى القصير. (المراجعات ، العمل الموسمي ، إلخ.)",
+  "crew_two_people": "طاقم من شخصين من موظفي HS",
+  "slaughter_services_shift": "خدمات الذبح في وردية واحدة",
+  "attached_permanent_basis": "الارتباط بالشركة بشكل دائم",
+  "around_performing_slaughter": "تنفيذ الذبح على مدار الساعة",
+  "work_rotational_basis": "العمل على أساس التناوب",
+  "slaughter_chickens_hour": "ذبح لحوم الدواجن تصل إلى 12,000 دجاجة في الساعة",
+  "about_company": "عن الشركة",
+  "for_agricultural_holdings": "للحيازات الزراعية",
+  "work_without_downtime": "العمل دون توقف",
+  "reducing_burden_accounting_department": "تخفيف العبء على قسم المحاسبة والموارد البشرية.",
+  "issues_registration_relations_between_our_company": "جميع القضايا المتعلقة بتسجيل الموظفين ، والعلاقات بين الموظفين ، والإجازات ، والتغيب عن العمل تتحملها شركتنا.",
+  "benefits_agroholdings": "فوائد للمزارعين"
 }
