--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -77,8 +77,25 @@
   "read_more": "Read more",
   "more_years_experience_range_services": "More than 11 years of experience in slaughter services",
   "investments_halal_slaughter": "35 million rubles of investments for the organization of Halal slaughter",
-  "speed_slaughter_per_hour.": "The speed of slaughter up to 12,000 heads per hour.",
+  "speed_slaughter_per_hour": "The speed of slaughter up to 12 000 heads per hour.",
   "certificates": "Certificates",
   "certificates_documentation": "Certificates and Documentation",
-  "company_necessary_documents_certificates": "Our company has the necessary list of documents and certificates"
+  "company_necessary_documents_certificates": "Our company has the necessary list of documents and certificates",
+  "service_packages": "Service packages",
+  "individual_client_price_plan": "Individual approach to each client in the price plan",
+  "mobile_brigade": "Mobile brigade",
+  "departure_factory": "Departure to the factory",
+  "short_term_audits_seasonal": "Short term. (Audits, seasonal work, etc.)",
+  "crew_two_people": "Crew of two people from HS staff",
+  "slaughter_services_shift": "Slaughter services in one shift",
+  "attached_permanent_basis": "Attachment to the company on a permanent basis",
+  "around_performing_slaughter": "Round-the-clock execution of the slaughter",
+  "work_rotational_basis": "Work on a rotational basis",
+  "slaughter_chickens_hour": "Slaughter of poultry meat up to 12,000 chickens per hour",
+  "about_company": "About company",
+  "for_agricultural_holdings": "For agricultural holdings",
+  "work_without_downtime": "Work without downtime",
+  "reducing_burden_accounting_department": "Reducing the burden on the accounting department and the HR department.",
+  "issues_registration_relations_between_our_company": "All issues related to the registration of personnel, relations between employees, vacations, absenteeism are assumed by our company.",
+  "benefits_agroholdings": "Benefits for Agroholdings"
 }
