--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -73,8 +73,25 @@
     "read_more": "Подробнее",
     "more_years_experience_range_services": "Более 11 лет опыта услуг ручного забоя",
     "investments_halal_slaughter": "35 млн рублей инвестиций на организацию убоя Халяль",
-    "speed_slaughter_per_hour": "Скорость убоя до 12000 голов в час.",
+    "speed_slaughter_per_hour": "Скорость убоя до 12 000 голов в час.",
     "certificates": "Сертификаты",
     "certificates_documentation": "Сертификаты и Документация",
-    "company_necessary_documents_certificates": "Наша компания имеет необходимый перечень документов и сертификатов"
+    "company_necessary_documents_certificates": "Наша компания имеет необходимый перечень документов и сертификатов",
+    "service_packages": "Пакеты услуг",
+    "individual_client_price_plan": "Индивидуальный подход к каждому клиенту в ценовом плане",
+    "mobile_brigade": "Мобильная бригада",
+    "departure_factory": "Выезд на предприятие",
+    "short_term_audits_seasonal": "Короткий срок. (Аудиты,сезонные работы итп)",
+    "crew_two_people": "Бригада от двух человек из штата компании HS",
+    "slaughter_services_shift": "Услуги убоя в одну смену",
+    "attached_permanent_basis": "Прикрепленние к компании на постоянной основе",
+    "around_performing_slaughter": "Круглосуточное выполнение заклания",
+    "work_rotational_basis": "Работа вахтовым методом",
+    "slaughter_chickens_hour": "Убой мяса птицы до 12,000 кур в час",
+    "about_company": "О компании",
+    "for_agricultural_holdings": "Агрохолдингам",
+    "work_without_downtime": "Работа без простоев",
+    "reducing_burden_accounting_department": "Снижение нагрузки на бухгалтерию и на отдел кадров.",
+    "issues_registration_relations_between_our_company": "Все вопросы связанные с оформлением кадров, отношений между сотрудниками, отпусками, прогулами берет на себя ответственность наша компания.",
+    "benefits_agroholdings": "Выгоды Агрохолдингам"
 }
