--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -97,5 +97,6 @@
   "work_without_downtime": "العمل دون توقف",
   "reducing_burden_accounting_department": "تخفيف العبء على قسم المحاسبة والموارد البشرية.",
   "issues_registration_relations_between_our_company": "جميع القضايا المتعلقة بتسجيل الموظفين ، والعلاقات بين الموظفين ، والإجازات ، والتغيب عن العمل تتحملها شركتنا.",
-  "benefits_agroholdings": "فوائد للمزارعين"
+  "benefits_agroholdings": "فوائد للمزارعين",
+  "benefits_agroholdings_text": "يمكن أن يؤدي الدخول السريع والتغطية للعملاء الجدد ، بالإضافة إلى تحديد المكانة الواثقة وحماية السمعة ، إلى تحسين صورة الشركة من خلال الالتزام بمعايير الحلال. المنافسة في أسواق رابطة الدول المستقلة تبشر بحصة مربحة في مبيعات لحوم الدواجن الحلال. يمكن أن يضيف تصدير المنتجات إلى الدول العربية أرباحًا ويمكن أن يشمل السلع الهامشية / شبه المصنعة. قد يضمن الشريك القوي مع الاعتراف الدولي نمو المبيعات في سوق الحلال الآخذ في الاتساع. يمكن أن تؤدي زيادة مجموعة المنتجات الحلال أيضًا إلى تعزيز الآفاق المالية."
 }
