--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -97,5 +97,6 @@
   "work_without_downtime": "Work without downtime",
   "reducing_burden_accounting_department": "Reducing the burden on the accounting department and the HR department.",
   "issues_registration_relations_between_our_company": "All issues related to the registration of personnel, relations between employees, vacations, absenteeism are assumed by our company.",
-  "benefits_agroholdings": "Benefits for Agroholdings"
+  "benefits_agroholdings": "Benefits for Agroholdings",
+  "benefits_agroholdings_text": "Rapid entry and coverage of new customers, plus confident positioning and protection of reputation, could lead to an improved company image through adherence to Halal standards. Competing in the CIS markets holds promise of a profitable share in Halal poultry meat sales. Exporting products to Arab countries can add profits and could include marginal/semi-finished goods. A strong partner with int'l recognition may guarantee sales growth in the expanding Halal market. Increasing the range of Halal products could also boost financial prospects."
 }
