--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -93,5 +93,6 @@
     "work_without_downtime": "Работа без простоев",
     "reducing_burden_accounting_department": "Снижение нагрузки на бухгалтерию и на отдел кадров.",
     "issues_registration_relations_between_our_company": "Все вопросы связанные с оформлением кадров, отношений между сотрудниками, отпусками, прогулами берет на себя ответственность наша компания.",
-    "benefits_agroholdings": "Выгоды Агрохолдингам"
+    "benefits_agroholdings": "Выгоды Агрохолдингам",
+    "benefits_agroholdings_text": "Быстрый выход на рынок и охват новых клиентов, а также уверенное позиционирование и защита репутации могут привести к улучшению имиджа компании благодаря соблюдению халяльных стандартов. Конкуренция на рынках СНГ обещает прибыльную долю в продажах халяльного мяса птицы. Экспорт продукции в арабские страны может увеличить прибыль и может включать маржинальные товары/полуфабрикаты. Сильный партнер с международным признанием может гарантировать рост продаж на расширяющемся рынке халяль. Расширение ассортимента халяльных продуктов также может улучшить финансовые перспективы."
 }
