--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -78,7 +78,7 @@
     "certificates_documentation": "Сертификаты и Документация",
     "company_necessary_documents_certificates": "Наша компания имеет необходимый перечень документов и сертификатов",
     "service_packages": "Пакеты услуг",
-    "individual_client_price_plan": "Индивидуальный подход к каждому клиенту в ценовом плане",
+    "individual_client_price_plan": "Индивидуальный подход к каждому клиенту",
     "mobile_brigade": "Мобильная бригада",
     "departure_factory": "Выезд на предприятие",
     "short_term_audits_seasonal": "Короткий срок. (Аудиты,сезонные работы итп)",
@@ -94,5 +94,15 @@
     "reducing_burden_accounting_department": "Снижение нагрузки на бухгалтерию и на отдел кадров.",
     "issues_registration_relations_between_our_company": "Все вопросы связанные с оформлением кадров, отношений между сотрудниками, отпусками, прогулами берет на себя ответственность наша компания.",
     "benefits_agroholdings": "Выгоды Агрохолдингам",
-    "benefits_agroholdings_text": "Быстрый выход на рынок и охват новых клиентов, а также уверенное позиционирование и защита репутации могут привести к улучшению имиджа компании благодаря соблюдению халяльных стандартов. Конкуренция на рынках СНГ обещает прибыльную долю в продажах халяльного мяса птицы. Экспорт продукции в арабские страны может увеличить прибыль и может включать маржинальные товары/полуфабрикаты. Сильный партнер с международным признанием может гарантировать рост продаж на расширяющемся рынке халяль. Расширение ассортимента халяльных продуктов также может улучшить финансовые перспективы."
+    "benefits_agroholdings_text": "Cоблюдение халяльных стандартов способствует быстрому  охвату новых клиентов и расширению ассортимента.  Возможность занять прибыльную долю в продажах халяльной продукции конкурируя на рынках СНГ. Экспорт продукции в арабские страны может увеличить прибыль. Халяль стафф - сильный партнер с международным признанием на расширяющемся рынке халяль.",
+    "full_company_name": "Полное название предприятия",
+    "company_address": "Адрес компании",
+    "which_package_suits_best": "Какой пакет вам больше подходит?",
+    "want_to_export_your_products": "Хотите выпускать вашу продукцию на экспорт?",
+    "contacts_communication": "Контакты для связи",
+    "fill_form_contact_you": "Заполните форму и мы свяжемся с вами",
+    "send": "Отправить",
+    "are_currently_working_halal": "Работаете ли вы с Халяль в настоящее время?",
+    "thank_your_time_contact_soon": "Благодарим вас за уделенное время. Мы скоро свяжемся с вами.",
+    "would_like_certificate_cooperating": "Хотели бы вы бесплатно получить сертификат ХАЛЯЛЬ, сотрудничая с нами?"
 }
