--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -82,7 +82,7 @@
   "certificates_documentation": "الشهادات والوثائق",
   "company_necessary_documents_certificates": "شركتنا لديها قائمة الوثائق والشهادات اللازمة",
   "service_packages": "حزم الخدمات",
-  "individual_client_price_plan": "نهج فردي لكل عميل في خطة الأسعار",
+  "individual_client_price_plan": "نهج فردي لكل عميل",
   "mobile_brigade": "فريق متنقل",
   "departure_factory": "حضور الفريق إلى المصنع",
   "short_term_audits_seasonal": "المدى القصير. (المراجعات ، العمل الموسمي ، إلخ.)",
@@ -98,5 +98,15 @@
   "reducing_burden_accounting_department": "تخفيف العبء على قسم المحاسبة والموارد البشرية.",
   "issues_registration_relations_between_our_company": "جميع القضايا المتعلقة بتسجيل الموظفين ، والعلاقات بين الموظفين ، والإجازات ، والتغيب عن العمل تتحملها شركتنا.",
   "benefits_agroholdings": "فوائد للمزارعين",
-  "benefits_agroholdings_text": "يمكن أن يؤدي الدخول السريع والتغطية للعملاء الجدد ، بالإضافة إلى تحديد المكانة الواثقة وحماية السمعة ، إلى تحسين صورة الشركة من خلال الالتزام بمعايير الحلال. المنافسة في أسواق رابطة الدول المستقلة تبشر بحصة مربحة في مبيعات لحوم الدواجن الحلال. يمكن أن يضيف تصدير المنتجات إلى الدول العربية أرباحًا ويمكن أن يشمل السلع الهامشية / شبه المصنعة. قد يضمن الشريك القوي مع الاعتراف الدولي نمو المبيعات في سوق الحلال الآخذ في الاتساع. يمكن أن تؤدي زيادة مجموعة المنتجات الحلال أيضًا إلى تعزيز الآفاق المالية."
+  "benefits_agroholdings_text": "يساهم الامتثال لمعايير الحلال في التغطية السريعة للعملاء الجدد وتوسيع النطاق. فرصة الحصول على حصة مربحة في مبيعات المنتجات الحلال من خلال المنافسة في أسواق رابطة الدول المستقلة. يمكن أن يؤدي تصدير المنتجات إلى الدول العربية إلى زيادة الأرباح. يعتبر طاقم العمل الحلال شريكًا قويًا له شهرة دولية في سوق الحلال الآخذ في الاتساع.",
+  "full_company_name": "اسم الشركة بالكامل",
+  "company_address": "عنوان الشركة",
+  "which_package_suits_best": "Which package suits you best?",
+  "want_to_export_your_products": "هل تريد تصدير منتجاتك؟",
+  "contacts_communication": "طرق التواصل",
+  "fill_form_contact_you": "املأ النموذج وسنتواصل معك",
+  "send": "إرسال",
+  "are_currently_working_halal": "هل تتعامل حاليا مع منتجات حلال؟",
+  "thank_your_time_contact_soon": "شكرا لك على وقتك. سوف نتصل بك قريبا.",
+  "would_like_certificate_cooperating": "هل ترغب في الحصول على شهادة حلال مجانًا من خلال التعاون معنا؟"
 }
