--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -101,7 +101,7 @@
   "benefits_agroholdings_text": "يساهم الامتثال لمعايير الحلال في التغطية السريعة للعملاء الجدد وتوسيع النطاق. فرصة الحصول على حصة مربحة في مبيعات المنتجات الحلال من خلال المنافسة في أسواق رابطة الدول المستقلة. يمكن أن يؤدي تصدير المنتجات إلى الدول العربية إلى زيادة الأرباح. يعتبر طاقم العمل الحلال شريكًا قويًا له شهرة دولية في سوق الحلال الآخذ في الاتساع.",
   "full_company_name": "اسم الشركة بالكامل",
   "company_address": "عنوان الشركة",
-  "which_package_suits_best": "Which package suits you best?",
+  "which_package_suits_best": "أي حزمة الخدمات تناسبك أكثر؟",
   "want_to_export_your_products": "هل تريد تصدير منتجاتك؟",
   "contacts_communication": "طرق التواصل",
   "fill_form_contact_you": "املأ النموذج وسنتواصل معك",
