--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -101,7 +101,7 @@
   "benefits_agroholdings_text": "Compliance with halal standards contributes to the rapid coverage of new customers and the expansion of the range. The opportunity to take a profitable share in the sales of halal products by competing in the CIS markets. Exporting products to Arab countries can increase profits. Halal staff is a strong partner with international recognition in the expanding halal market.",
   "full_company_name": "Full company name",
   "company_address": "Company address",
-  "which_package_suits_best": "Company address",
+  "which_package_suits_best": "Which package suits you best?",
   "want_to_export_your_products": "Do you want to export your products?",
   "contacts_communication": "Contacts for communication",
   "fill_form_contact_you": "Fill out the form and we will contact you",
