--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -2,9 +2,9 @@
     "title": "A simple example",
     "subtitle": "It's a blank-page. Start to build your'e page from here.",
     "error_with_status": "An error occurred on server",
-    "404": "This page could not be found.",
-    "404_subtitle": "You can either stay and chill here, or go back to the beginning.",
-    "back": "back to home",
+    "404": "Эта страница не может быть найдена.",
+    "404_subtitle": "Вы можете либо остаться здесь, либо вернуться к началу.",
+    "back": "вернуться на главную",
     "error_without_status": "An error occurred on the server",
     "contact_title": "Free Project Quote",
     "contact_title2": "Say Hello to Us",
