--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -55,8 +55,8 @@
   "dark_coloured": "غامق",
   "main": "الأساسية",
   "about_us": "معلومات عنا",
-  "pricing": "التسعير",
-  "contacts": "جهات الاتصال",
+  "pricing": "خدمات",
+  "contacts": "تواصل معنا",
   "halal": "حلال",
   "staff": "ستاف",
   "halal_staff": "حلال ستاف",
@@ -96,9 +96,9 @@
   "for_agricultural_holdings": "للحيازات الزراعية",
   "work_without_downtime": "العمل دون توقف",
   "reducing_burden_accounting_department": "تخفيف العبء على قسم المحاسبة والموارد البشرية.",
-  "issues_registration_relations_between_our_company": "جميع القضايا المتعلقة بتسجيل الموظفين ، والعلاقات بين الموظفين ، والإجازات ، والتغيب عن العمل تتحملها شركتنا.",
+  "issues_registration_relations_between_our_company": "يساهم الامتثال لمعايير الحلال في التغطية السريعة للعملاء الجدد وتوسيع النطاق.",
   "benefits_agroholdings": "فوائد للمزارعين",
-  "benefits_agroholdings_text": "يساهم الامتثال لمعايير الحلال في التغطية السريعة للعملاء الجدد وتوسيع النطاق. فرصة الحصول على حصة مربحة في مبيعات المنتجات الحلال من خلال المنافسة في أسواق رابطة الدول المستقلة. يمكن أن يؤدي تصدير المنتجات إلى الدول العربية إلى زيادة الأرباح. يعتبر طاقم العمل الحلال شريكًا قويًا له شهرة دولية في سوق الحلال الآخذ في الاتساع.",
+  "benefits_agroholdings_text": "فرصة الحصول على حصة مربحة في مبيعات المنتجات الحلال من خلال المنافسة في أسواق رابطة الدول المستقلة. يمكن أن يؤدي تصدير المنتجات إلى الدول العربية إلى زيادة الأرباح. يعتبر طاقم العمل الحلال شريكًا قويًا له شهرة دولية في سوق الحلال الآخذ في الاتساع",
   "full_company_name": "اسم الشركة بالكامل",
   "company_address": "عنوان الشركة",
   "which_package_suits_best": "أي حزمة الخدمات تناسبك أكثر؟",
@@ -108,5 +108,6 @@
   "send": "إرسال",
   "are_currently_working_halal": "هل تتعامل حاليا مع منتجات حلال؟",
   "thank_your_time_contact_soon": "شكرا لك على وقتك. سوف نتصل بك قريبا.",
-  "would_like_certificate_cooperating": "هل ترغب في الحصول على شهادة حلال مجانًا من خلال التعاون معنا؟"
+  "would_like_certificate_cooperating": "هل ترغب في الحصول على شهادة حلال مجانًا من خلال التعاون معنا؟",
+  "samara_stankozavodskaya": "سمارة ش. Stankozavodskaya ، 40أ"
 }
