--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -51,8 +51,8 @@
     "dark_coloured": "Темная",
     "main": "Главная",
     "about_us": "О нас",
-    "pricing": "Расценки",
-    "contacts": "Контакты",
+    "pricing": "Услуги",
+    "contacts": "Связаться с нами",
     "halal": "Халяль",
     "staff": "Стафф",
     "halal_staff": "Халяль Стафф",
@@ -92,9 +92,9 @@
     "for_agricultural_holdings": "Агрохолдингам",
     "work_without_downtime": "Работа без простоев",
     "reducing_burden_accounting_department": "Снижение нагрузки на бухгалтерию и на отдел кадров.",
-    "issues_registration_relations_between_our_company": "Все вопросы связанные с оформлением кадров, отношений между сотрудниками, отпусками, прогулами берет на себя ответственность наша компания.",
+    "issues_registration_relations_between_our_company": "Cоблюдение халяльных стандартов способствует быстрому  охвату новых клиентов и расширению ассортимента.",
     "benefits_agroholdings": "Выгоды Агрохолдингам",
-    "benefits_agroholdings_text": "Cоблюдение халяльных стандартов способствует быстрому  охвату новых клиентов и расширению ассортимента.  Возможность занять прибыльную долю в продажах халяльной продукции конкурируя на рынках СНГ. Экспорт продукции в арабские страны может увеличить прибыль. Халяль стафф - сильный партнер с международным признанием на расширяющемся рынке халяль.",
+    "benefits_agroholdings_text": "Возможность занять прибыльную долю в продажах халяльной продукции конкурируя на рынках СНГ. Экспорт продукции в арабские страны может увеличить прибыль. Халяль стафф - сильный партнер с международным признанием на расширяющемся рынке халяль.",
     "full_company_name": "Полное название предприятия",
     "company_address": "Адрес компании",
     "which_package_suits_best": "Какой пакет вам больше подходит?",
@@ -104,5 +104,6 @@
     "send": "Отправить",
     "are_currently_working_halal": "Работаете ли вы с Халяль в настоящее время?",
     "thank_your_time_contact_soon": "Благодарим вас за уделенное время. Мы скоро свяжемся с вами.",
-    "would_like_certificate_cooperating": "Хотели бы вы бесплатно получить сертификат ХАЛЯЛЬ, сотрудничая с нами?"
+    "would_like_certificate_cooperating": "Хотели бы вы бесплатно получить сертификат ХАЛЯЛЬ, сотрудничая с нами?",
+    "samara_stankozavodskaya": "г. Самара, ул. Станкозаводская, 40А"
 }
