--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -81,7 +81,7 @@
     "individual_client_price_plan": "Индивидуальный подход к каждому клиенту",
     "mobile_brigade": "Мобильная бригада",
     "departure_factory": "Выезд на предприятие",
-    "short_term_audits_seasonal": "Короткий срок. (Аудиты,сезонные работы итп)",
+    "short_term_audits_seasonal": "Короткий срок. (Аудиты,сезонные работы и т.п.)",
     "crew_two_people": "Бригада от двух человек из штата компании HS",
     "slaughter_services_shift": "Услуги убоя в одну смену",
     "attached_permanent_basis": "Прикрепленние к компании на постоянной основе",
